--- a/web/templates/webclient/base.html
+++ b/web/templates/webclient/base.html
@@ -39,7 +39,7 @@
 			<div id="tab_area">
 				<span id="_tab" class="chan-tab active-tab" data-channel=''>Game</span>
 			</div>
-			<div id="_log" class="log" role="log"></div>
+			<div id="_log" class="log" role="log"><div class="dl-button" onclick="LogDownload(this)" alt="Download this log" title="Download this log">📥</div></div>
 		</div>
 		<p id="prompt" aria-live="polite"></p>
 		<div id="toggles">
