fix dl button positioning

--- a/web/static/webclient/css/webclient.css
+++ b/web/static/webclient/css/webclient.css
@@ -111,9 +111,10 @@ body {
 
 .dl-button {
 	cursor: pointer;
-	position: absolute;
-	bottom: 0;
-	right: 0;
+	position: sticky;
+	top: 0;
+	float: right;
+	margin-right: 0.5rem;
 }
 
 .mxplink {
