--- a/web/templates/webclient/base.html
+++ b/web/templates/webclient/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 {% if not user.is_authenticated %}
-<meta http-equiv="Refresh" content="0; url='{% url 'login' %}'" />
+<meta http-equiv="Refresh" content="0; url='{% url 'login' %}/?next=/webclient'" />
 {% else %}
 {% load static %}
 <html dir="ltr" lang="en">
